# noita-pixel-engine

./: CMakeLists.txt  README.md
.github/workflows/: android.yml
core/: noita_core.cpp  noita_core.hpp
